<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    tools:context=".CreateEventActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

      <TextView
          android:id="@+id/tvEventType"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:labelFor="@id/spEventType"
          android:text="@string/tvEventType" />

      <Spinner
          android:id="@+id/spEventType"
          android:layout_width="match_parent"
          android:layout_height="48dp" />

      <TextView
          android:id="@+id/textView9"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:labelFor="@id/etEventName"
          android:text="@string/tvEventName" />

      <EditText
          android:id="@+id/etEventName"
          android:layout_width="match_parent"
          android:layout_height="57dp"
          android:autofillHints="eventName"
          android:ems="10"
          android:inputType="textPersonName" />

      <TextView
          android:id="@+id/textView10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:labelFor="@id/etStartDate"
          android:text="@string/tvStartDate" />

      <EditText
          android:id="@+id/etStartDate"
          android:layout_width="match_parent"
          android:layout_height="58dp"
          android:autofillHints="startDate"
          android:ems="10"
          android:focusable="false"
          android:inputType="date"
          android:maxLines="1"
          android:minHeight="48dp" />

      <TextView
          android:id="@+id/tvEndDate"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:labelFor="@id/etEndDate"
          android:text="@string/tvEndDate" />

      <EditText
          android:id="@+id/etEndDate"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:autofillHints="endDate"
          android:ems="10"
          android:focusable="false"
          android:inputType="date" />

      <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/swAllDay"
          android:layout_width="159dp"
          android:layout_height="48dp"
          android:text="@string/swAllDay" />

      <TextView
          android:id="@+id/tvDescription"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:labelFor="@id/etDescription"
          android:text="@string/tvDescription" />

      <EditText
          android:id="@+id/etDescription"
          android:layout_width="match_parent"
          android:layout_height="104dp"
          android:autofillHints="Description"
          android:ems="10"
          android:gravity="start|top"
          android:inputType="textMultiLine" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:text="@string/lblSave" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/lblCancel" />

      </LinearLayout>


    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>